Bytt til distroless/java21