@@ -1,25 +1,8 @@
-FROM eclipse-temurin:21 as jre-build
+FROM gcr.io/distroless/java21
 
-# Create a custom Java runtime
-RUN $JAVA_HOME/bin/jlink \
-         --add-modules ALL-MODULE-PATH \
-         --strip-debug \
-         --no-man-pages \
-         --no-header-files \
-         --compress=2 \
-         --output /javaruntime
-
-# Runtime
-FROM debian:buster-slim
-
+ENV TZ="Europe/Oslo"
 ENV LANG='nb_NO.UTF-8' LANGUAGE='nb_NO:nb' LC_ALL='nb:NO.UTF-8' TZ="Europe/Oslo"
-ENV JAVA_HOME=/opt/java/openjdk
-ENV PATH "${JAVA_HOME}/bin:${PATH}"
 
-COPY --from=jre-build /javaruntime $JAVA_HOME
+COPY build/install/*/lib /app/lib
 
-COPY build/install/* /
-
-USER nobody
-CMD ["dp-datadeling"]
-EXPOSE 8080
+ENTRYPOINT ["java", "-cp", "/app/lib/*", "no.nav.dagpenger.datadeling.AppKt"]
